Implementing gatsby-background-image & fixing vertical spacing on home

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -174,16 +174,7 @@ h1, h2, h3, h4, h5, h6 {
 .hero {
   background-color: $light;
   position: relative;
-}
-
-.hero-bg {
-  display: block;
-  position: absolute !important;
-  height: calc(100vh - 3rem);
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 0;
+  padding-bottom: 0;
 }
 
 .hero-em {
